<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/imagen_fondo"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTitulo"
                style="@style/titulos"
                android:text="@string/titulo" />

            <TextView
                android:id="@+id/textView2"
                style="@style/subtitulo"
                android:text="@string/main_subtitulo" />

        <Button
            android:id="@+id/buttonVideo"
            style="@style/botones_video"
            android:text="@string/boton_reproducir_video" />

            <Button
                android:id="@+id/buttonMusica"
                style="@style/botones_musica"
                android:text="@string/boton_reproducir_audio" />

            <include layout="@layout/datos_autor"/>

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>