<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".video.opciones_reproducir_video">

    <include layout="@layout/imagen_fondo"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTitulo"
                style="@style/titulos"
                android:text="@string/reproductor_video" />

            <TextView
                android:id="@+id/textView2"
                style="@style/subtitulo"
                android:text="@string/opciones_video" />

            <Button
                android:id="@+id/buttonVideoEjemplo"
                style="@style/botones_video"
                android:text="@string/video_ejemplo" />

            <Button
                android:id="@+id/buttonVideoSeleccion"
                style="@style/botones_video"
                android:text="@string/video_seleeccion" />

            <include layout="@layout/datos_autor"/>


        </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>